fixed layout issue

--- a/src/components/Brand/brand.css
+++ b/src/components/Brand/brand.css
@@ -553,7 +553,7 @@
     .bubble {
         height: 30ch;
         width: 60ch;
-        top: 4ch;
+        top: 9ch;
         padding: 20%;
         left: 0ch;
         margin: 0;
@@ -574,7 +574,7 @@
     .about-me-bg {
         position: relative;
         width: 100%;
-        height: 50%;
+        height: 60%;
         top: 0ch;
         border-radius: 0;
         padding: 0;
@@ -638,7 +638,7 @@
     }
 
     .wrapper-sqr-about-me {
-        top: 45ch;
+        top: 40ch;
         right: 0ch;
         z-index: 1;
         position: absolute;
@@ -653,12 +653,12 @@
 
     .about-me-txt {
         position: relative;
-    text-align: center;
+        text-align: center;
         width:98%;
         height: 130px;
         font-size: 18px;
         line-height: 35px;
-        top: 29px;
+        top: 25px;
         left: 0px;
         margin: 0px;
         z-index: 3;
